fixed up notepad

--- a/NotePad.kv
+++ b/NotePad.kv
@@ -1,8 +1,9 @@
-
 ScreenManagement:
+	id:manager
+
 	Home:
-	Work:
-	Alternate:
+	Other:
+
 
 <Home>:
 	name:"home"
@@ -20,22 +21,16 @@ ScreenManagement:
 			text: 'Submit'
 			size_hint: (.2, .1)
 			width: 500
-			on_release:app.process()
+			on_release: app.process()
 		Button:
-			text: 'Change'
-			on_release: app.root.current="work"
-<Work>:
-	name: 'work'
-	Label:
-		text:"Work Screen"
-	Button:
-		text: 'Change'
-		on_release: app.root.current="home"
-	Button:
-		text: 'Change 2'
-		on_release: app.root.current="alt"
-
-<Alternate>:
-	name:'alt'
-	Label:
-		text: 'Alternate'
+			text: 'Change to Other'
+			on_release: app.root.current="other"
+<Other>:
+	name:'other'
+	GridLayout:
+		cols:1
+		Label:
+			text: 'Other Screen'
+		Button:
+			text: 'Change to home'
+			on_release:app.root.current= 'home'
