fixed bug where previous text would be displayed when making a new note. Now when a new note is made it is automatically given blank text

--- a/NotePad.kv
+++ b/NotePad.kv
@@ -59,7 +59,7 @@ ScreenManagement:
 			orientation: 'horizontal'
 			rows: 1
 			Label:
-				text: 'tasks'
+				text: 'notes'
 				size_hint: (.3, .3)
 			Button:
 				text: 'Delete'
