removed leftover pass statements and tweaked the text of some widgets

--- a/NotePad.kv
+++ b/NotePad.kv
@@ -89,7 +89,7 @@ ScreenManagement:
 	GridLayout:
 		cols:1
 		Button:
-			text: 'Cancel'
+			text: 'Exit'
 			on_release: root.cancel_delete()
 		Delete_scroll:
 			id: delete_view
